--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,25 @@ version: '3'
 
 services:
 
+  app:
+    build: frontend
+    volumes:
+      - ./frontend:/usr/src/app
+    depends_on:
+      - adventure
+    ports:
+      - 3000:3000
+    command: npm start
+    networks:
+      - compose-network
+
   adventure:
     build: .
-    command: ["runserver", "0.0.0.0:8000"]
+    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
     ports:
       - "8000:8000"
     volumes:
-      - .:/srv
+      - .:/code
     depends_on:
       - db-postgres
     networks:
@@ -22,10 +34,10 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - .data/postgres:/var/lib/postgresql/data 
+      - .data/postgres:/var/lib/postgresql/data
     networks:
       - compose-network
-      
+
   pgadmin:
     image: dpage/pgadmin4
     environment:
@@ -38,6 +50,6 @@ services:
     networks:
       - compose-network
 
-networks: 
+networks:
   compose-network:
     driver: bridge
