--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,19 @@ version: '3'
 
 services:
 
-  app:
+  front-service:
     build: frontend
     volumes:
       - ./frontend:/usr/src/app
     depends_on:
-      - adventure
+      - back-service
     ports:
       - "3000:3000"
     command: npm start
     networks:
       - compose-network
 
-  adventure:
+  back-service: &back-service
     build: .
     command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
     ports:
@@ -22,11 +22,11 @@ services:
     volumes:
       - .:/code
     depends_on:
-      - db-postgres
+      - postgres-service
     networks:
       - compose-network
 
-  db-postgres:
+  postgres-service:
     image: postgres:alpine
     environment:
       POSTGRES_PASSWORD: "root"
@@ -38,7 +38,7 @@ services:
     networks:
       - compose-network
 
-  pgadmin:
+  pgadmin-service:
     image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: "ash@poke.com"
@@ -46,9 +46,24 @@ services:
     ports:
       - "16543:80"
     depends_on:
-      - db-postgres
+      - postgres-service
     networks:
       - compose-network
+
+  rabbitmq-service:
+    image: rabbitmq:3.7.0-management-alpine
+    ports:
+      - "15672:15672"
+    networks:
+      - compose-network
+
+  celery-worker-service:
+      <<: *back-service
+      command: celery -A adventure worker --loglevel=info
+      ports: []
+      depends_on:
+        - rabbitmq-service
+        - postgres-service
 
 networks:
   compose-network:
