--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ django-filter>=2
 django-cors-headers>=2
 psycopg2_binary>=2
 celery>=4
-django-graphql-jwt==0.2.1
+django-graphql-jwt>=0.2
+boto3>=1.9
+django-storages>=1.7
