--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django>=2
+Django==2.2
 requests>=2
 graphene-django>=2
 Pillow>=5
@@ -9,3 +9,7 @@ celery>=4
 django-graphql-jwt>=0.2
 boto3>=1.9
 django-storages>=1.7
+
+channels==2.4.0
+channels-redis==3.2.0
+django-channels-graphql-ws==0.7.4
