--- a/react-front/package.json
+++ b/react-front/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.9",
+    "@apollo/react-hooks": "^4.0.0",
     "apollo-boost": "^0.3.1",
-    "graphql": "^14.1.1",
-    "graphql-tag": "^2.10.1",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-ws": "^1.0.20",
+    "graphql": "^14.7.0",
+    "graphql-tag": "^2.11.0",
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
     "react-dom": "^16.8.4",
     "react-hook-form": "^5.7.2",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.1",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "scripts": {
     "start": "react-scripts start",
