--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 #local environment
-
+DJANGO_DOMAIN=127.0.0.1:8000
 SECRET_KEY=yep4-wk79%sfrg_am&&v&qrvy0&g-)4jooly(7byw!igi)9!j@
+STORAGE_DIR=/storage
 
 #database postgresql
 
